// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateTableDDL > generates CREATE TABLE for a simple entity with UUID PK 1`] = `
"CREATE TABLE IF NOT EXISTS "TestUser" (
  "id" UUID DEFAULT gen_random_uuid() NOT NULL,
  "version" INTEGER NOT NULL,
  "createdAt" TIMESTAMPTZ(3) NOT NULL,
  "updatedAt" TIMESTAMPTZ(3) NOT NULL,
  "name" TEXT NOT NULL,
  "email" TEXT,
  "age" INTEGER DEFAULT 0 NOT NULL,
  PRIMARY KEY ("id")
);"
`;

exports[`generateTableDDL > generates CREATE TABLE for entity with UUID PK and ManyToOne FK column 1`] = `
"CREATE TABLE IF NOT EXISTS "TestArticle" (
  "id" UUID DEFAULT gen_random_uuid() NOT NULL,
  "version" INTEGER NOT NULL,
  "createdAt" TIMESTAMPTZ(3) NOT NULL,
  "updatedAt" TIMESTAMPTZ(3) NOT NULL,
  "title" TEXT NOT NULL,
  "authorId" UUID NOT NULL,
  PRIMARY KEY ("id")
);"
`;

exports[`generateTableDDL > generates CREATE TABLE for owning side of OneToOne (includes FK column) 1`] = `
"CREATE TABLE IF NOT EXISTS "TestUserWithProfile" (
  "id" UUID DEFAULT gen_random_uuid() NOT NULL,
  "version" INTEGER NOT NULL,
  "createdAt" TIMESTAMPTZ(3) NOT NULL,
  "updatedAt" TIMESTAMPTZ(3) NOT NULL,
  "name" TEXT NOT NULL,
  "profileId" UUID,
  PRIMARY KEY ("id")
);"
`;

exports[`generateTableDDL > generates CREATE TABLE with check constraints 1`] = `
"CREATE TABLE IF NOT EXISTS "TestChecked" (
  "id" UUID DEFAULT gen_random_uuid() NOT NULL,
  "version" INTEGER NOT NULL,
  "createdAt" TIMESTAMPTZ(3) NOT NULL,
  "updatedAt" TIMESTAMPTZ(3) NOT NULL,
  "age" INTEGER NOT NULL,
  "score" DOUBLE PRECISION NOT NULL,
  PRIMARY KEY ("id"),
  CONSTRAINT "chk_f6l8XZYrtK2" CHECK (score BETWEEN 0 AND 100),
  CONSTRAINT "age_positive" CHECK (age >= 0)
);"
`;

exports[`generateTableDDL > generates CREATE TABLE with composite primary key (VersionKeyed) 1`] = `
"CREATE TABLE IF NOT EXISTS "TestVersionKeyed" (
  "id" UUID DEFAULT gen_random_uuid() NOT NULL,
  "versionId" UUID DEFAULT gen_random_uuid() NOT NULL,
  "createdAt" TIMESTAMPTZ(3) NOT NULL,
  "updatedAt" TIMESTAMPTZ(3) NOT NULL,
  "name" TEXT NOT NULL,
  PRIMARY KEY ("id", "versionId")
);"
`;

exports[`generateTableDDL > generates CREATE TABLE with schema namespace 1`] = `
"CREATE TABLE IF NOT EXISTS "public"."TestUser" (
  "id" UUID DEFAULT gen_random_uuid() NOT NULL,
  "version" INTEGER NOT NULL,
  "createdAt" TIMESTAMPTZ(3) NOT NULL,
  "updatedAt" TIMESTAMPTZ(3) NOT NULL,
  "name" TEXT NOT NULL,
  "email" TEXT,
  "age" INTEGER DEFAULT 0 NOT NULL,
  PRIMARY KEY ("id")
);"
`;

exports[`generateTableDDL > generates CREATE TABLE with scope field 1`] = `
"CREATE TABLE IF NOT EXISTS "TestScopedEntity" (
  "id" UUID DEFAULT gen_random_uuid() NOT NULL,
  "scope" TEXT NOT NULL,
  "version" INTEGER NOT NULL,
  "createdAt" TIMESTAMPTZ(3) NOT NULL,
  "updatedAt" TIMESTAMPTZ(3) NOT NULL,
  "label" TEXT NOT NULL,
  PRIMARY KEY ("id")
);"
`;

exports[`generateTableDDL > generates CREATE TABLE with soft-delete and expiry date fields 1`] = `
"CREATE TABLE IF NOT EXISTS "TestSoftDelete" (
  "id" UUID DEFAULT gen_random_uuid() NOT NULL,
  "version" INTEGER NOT NULL,
  "createdAt" TIMESTAMPTZ(3) NOT NULL,
  "updatedAt" TIMESTAMPTZ(3) NOT NULL,
  "deletedAt" TIMESTAMPTZ(3),
  "expiresAt" TIMESTAMPTZ(3),
  "name" TEXT NOT NULL,
  PRIMARY KEY ("id")
);"
`;

exports[`generateTableDDL > generates CREATE TABLE with unique constraints 1`] = `
"CREATE TABLE IF NOT EXISTS "TestIndexed" (
  "id" UUID DEFAULT gen_random_uuid() NOT NULL,
  "version" INTEGER NOT NULL,
  "createdAt" TIMESTAMPTZ(3) NOT NULL,
  "updatedAt" TIMESTAMPTZ(3) NOT NULL,
  "name" TEXT NOT NULL,
  "email" TEXT NOT NULL,
  PRIMARY KEY ("id"),
  CONSTRAINT "unique_email" UNIQUE ("email")
);"
`;

exports[`generateTableDDL generates CREATE TABLE for a simple entity with UUID PK 1`] = `
"CREATE TABLE IF NOT EXISTS "TestUser" (
  "id" UUID DEFAULT gen_random_uuid() NOT NULL,
  "version" INTEGER NOT NULL,
  "createdAt" TIMESTAMPTZ(3) NOT NULL,
  "updatedAt" TIMESTAMPTZ(3) NOT NULL,
  "name" TEXT NOT NULL,
  "email" TEXT,
  "age" INTEGER DEFAULT 0 NOT NULL,
  PRIMARY KEY ("id")
);"
`;

exports[`generateTableDDL generates CREATE TABLE for entity with UUID PK and ManyToOne FK column 1`] = `
"CREATE TABLE IF NOT EXISTS "TestArticle" (
  "id" UUID DEFAULT gen_random_uuid() NOT NULL,
  "version" INTEGER NOT NULL,
  "createdAt" TIMESTAMPTZ(3) NOT NULL,
  "updatedAt" TIMESTAMPTZ(3) NOT NULL,
  "title" TEXT NOT NULL,
  "authorId" UUID NOT NULL,
  PRIMARY KEY ("id")
);"
`;

exports[`generateTableDDL generates CREATE TABLE for owning side of OneToOne (includes FK column) 1`] = `
"CREATE TABLE IF NOT EXISTS "TestUserWithProfile" (
  "id" UUID DEFAULT gen_random_uuid() NOT NULL,
  "version" INTEGER NOT NULL,
  "createdAt" TIMESTAMPTZ(3) NOT NULL,
  "updatedAt" TIMESTAMPTZ(3) NOT NULL,
  "name" TEXT NOT NULL,
  "profileId" UUID,
  PRIMARY KEY ("id")
);"
`;

exports[`generateTableDDL generates CREATE TABLE with check constraints 1`] = `
"CREATE TABLE IF NOT EXISTS "TestChecked" (
  "id" UUID DEFAULT gen_random_uuid() NOT NULL,
  "version" INTEGER NOT NULL,
  "createdAt" TIMESTAMPTZ(3) NOT NULL,
  "updatedAt" TIMESTAMPTZ(3) NOT NULL,
  "age" INTEGER NOT NULL,
  "score" DOUBLE PRECISION NOT NULL,
  PRIMARY KEY ("id"),
  CONSTRAINT "chk_f6l8XZYrtK2" CHECK (score BETWEEN 0 AND 100),
  CONSTRAINT "age_positive" CHECK (age >= 0)
);"
`;

exports[`generateTableDDL generates CREATE TABLE with composite primary key (VersionKeyed) 1`] = `
"CREATE TABLE IF NOT EXISTS "TestVersionKeyed" (
  "id" UUID DEFAULT gen_random_uuid() NOT NULL,
  "versionId" UUID DEFAULT gen_random_uuid() NOT NULL,
  "createdAt" TIMESTAMPTZ(3) NOT NULL,
  "updatedAt" TIMESTAMPTZ(3) NOT NULL,
  "name" TEXT NOT NULL,
  PRIMARY KEY ("id", "versionId")
);"
`;

exports[`generateTableDDL generates CREATE TABLE with schema namespace 1`] = `
"CREATE TABLE IF NOT EXISTS "public"."TestUser" (
  "id" UUID DEFAULT gen_random_uuid() NOT NULL,
  "version" INTEGER NOT NULL,
  "createdAt" TIMESTAMPTZ(3) NOT NULL,
  "updatedAt" TIMESTAMPTZ(3) NOT NULL,
  "name" TEXT NOT NULL,
  "email" TEXT,
  "age" INTEGER DEFAULT 0 NOT NULL,
  PRIMARY KEY ("id")
);"
`;

exports[`generateTableDDL generates CREATE TABLE with scope field 1`] = `
"CREATE TABLE IF NOT EXISTS "TestScopedEntity" (
  "id" UUID DEFAULT gen_random_uuid() NOT NULL,
  "scope" TEXT NOT NULL,
  "version" INTEGER NOT NULL,
  "createdAt" TIMESTAMPTZ(3) NOT NULL,
  "updatedAt" TIMESTAMPTZ(3) NOT NULL,
  "label" TEXT NOT NULL,
  PRIMARY KEY ("id")
);"
`;

exports[`generateTableDDL generates CREATE TABLE with soft-delete and expiry date fields 1`] = `
"CREATE TABLE IF NOT EXISTS "TestSoftDelete" (
  "id" UUID DEFAULT gen_random_uuid() NOT NULL,
  "version" INTEGER NOT NULL,
  "createdAt" TIMESTAMPTZ(3) NOT NULL,
  "updatedAt" TIMESTAMPTZ(3) NOT NULL,
  "deletedAt" TIMESTAMPTZ(3),
  "expiresAt" TIMESTAMPTZ(3),
  "name" TEXT NOT NULL,
  PRIMARY KEY ("id")
);"
`;

exports[`generateTableDDL generates CREATE TABLE with unique constraints 1`] = `
"CREATE TABLE IF NOT EXISTS "TestIndexed" (
  "id" UUID DEFAULT gen_random_uuid() NOT NULL,
  "version" INTEGER NOT NULL,
  "createdAt" TIMESTAMPTZ(3) NOT NULL,
  "updatedAt" TIMESTAMPTZ(3) NOT NULL,
  "name" TEXT NOT NULL,
  "email" TEXT NOT NULL,
  PRIMARY KEY ("id"),
  CONSTRAINT "unique_email" UNIQUE ("email")
);"
`;
